Migrate data from Github

--- a/config.toml
+++ b/config.toml
@@ -1,93 +1,47 @@
 baseurl = "https://aarynsmith.gitlab.io/"
-contentdir    = "content"
-layoutdir     = "layouts"
-publishdir    = "public"
-title = "Beautiful Hugo"
-canonifyurls  = true
-
 DefaultContentLanguage = "en"
+title = "Aaryn Smith"
 theme = "beautifulhugo"
 metaDataFormat = "yaml"
+pygmentsStyle = "trac"
 pygmentsUseClasses = true
-pygmentCodeFences = true
-#disqusShortname = "XXX"
-#googleAnalytics = "XXX"
+pygmentsCodeFences = true
+pygmentsCodefencesGuessSyntax = true
+#disqusShortname = "aarynsmith-github-io"
+googleAnalytics = "UA-117169357-1"
 
 [Params]
-  subtitle = "Hugo Blog Template for GitLab Pages"
-  logo = "img/avatar-icon.png"
+  subtitle = "Developer / Sysadmin / Jack of all trades"
+#   logo = "img/avatar-icon.png"
   favicon = "img/favicon.ico"
   dateFormat = "January 2, 2006"
   commit = false
   rss = true
-  comments = true
-#  gcse = "012345678901234567890:abcdefghijk" # Get your code from google.com/cse. Make sure to go to "Look and Feel" and change Layout to "Full Width" and Theme to "Classic"
-
-#[[Params.bigimg]]
-#  src = "img/triangle.jpg"
-#  desc = "Triangle"
-#[[Params.bigimg]]
-#  src = "img/sphere.jpg"
-#  desc = "Sphere"
-#[[Params.bigimg]]
-#  src = "img/hexagon.jpg"
-#  desc = "Hexagon"
+  comments = false
+  readingTime = true
+  useHLJS = true
+  socialShare = false
 
 [Author]
-  name = "Some Person"
-  email = "youremail@domain.com"
-  facebook = "username"
-  googleplus = "+username" # or xxxxxxxxxxxxxxxxxxxxx
-  gitlab = "username"
-  github = "username"
-  twitter = "username"
-  reddit = "username"
-  linkedin = "username"
-  xing = "username"
-  stackoverflow = "users/XXXXXXX/username"
-  snapchat = "username"
-  instagram = "username"
-  youtube = "user/username" # or channel/channelname
-  soundcloud = "username"
-  spotify = "username"
-  bandcamp = "username"
-  itchio = "username"
-
+  name = "Aaryn Smith"
+  website = "aarynsmith.github.io"
+  email = "aarynsmith<AT>gmail<DOT>com"
+  github = "AarynSmith"
+  gitlab = "aarynsmith"
+  linkedin = "aaryn-smith"
+  stackoverflow = "users/9608512/aaryn-smith"
 
 [[menu.main]]
     name = "Blog"
-    url = ""
-    weight = 1
+    url = "blog/"
+    weight = 2
 
 [[menu.main]]
     name = "About"
-    url = "page/about/"
-    weight = 3
-
-[[menu.main]]
-    identifier = "samples"
-    name = "Samples"
-    weight = 2
-
-[[menu.main]]
-    parent = "samples"
-    name = "Big Image Sample"
-    url = "post/2017-03-07-bigimg-sample"
+    url = "pages/about-me/"
     weight = 1
 
 [[menu.main]]
-    parent = "samples"
-    name = "Math Sample"
-    url = "post/2017-03-05-math-sample"
-    weight = 2
-
-[[menu.main]]
-    parent = "samples"
-    name = "Code Sample"
-    url = "post/2016-03-08-code-sample"
-    weight = 3
-
-[[menu.main]]
-    name = "Tags"
-    url = "tags"
+    name = "Projects"
+    url = "projects/"
     weight = 3
