Fix footer link. Again.

--- a/config.toml
+++ b/config.toml
@@ -24,7 +24,7 @@ googleAnalytics = "UA-120375015-1"
 
 [Author]
   name = "Aaryn Smith"
-  website = "https://aarynsmith.github.io/"
+  website = "https://aarynsmith.gitlab.io/"
   email = "aarynsmith<AT>gmail<DOT>com"
   github = "AarynSmith"
   gitlab = "aarynsmith"
