--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://aarynsmith.gitlab.io/"
+baseurl = "https://aarynsmith.com/"
 DefaultContentLanguage = "en"
 title = "Aaryn Smith"
 theme = "beautifulhugo"
@@ -21,7 +21,7 @@ googleAnalytics = "UA-120375015-1"
 
 [Author]
   name = "Aaryn Smith"
-  website = "https://aarynsmith.gitlab.io/"
+  website = "https://aarynsmith.com/"
   email = "aarynsmith<AT>gmail<DOT>com"
   github = "AarynSmith"
   gitlab = "aarynsmith"
