--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ metaDataFormat = "yaml"
 pygmentsCodeFences = true
 pygmentsUseClasses = true
 disqusShortname = "aarynsmith-gitlab-io"
-googleAnalytics = "UA-120375015-1"
+
 
 [Params]
   subtitle = "Developer / Sysadmin / Jack of all trades"
@@ -18,6 +18,7 @@ googleAnalytics = "UA-120375015-1"
   comments = false
   readingTime = true
   socialShare = false
+  quantcast = "p-4fB4sM_5pRWvK"
 
 [Author]
   name = "Aaryn Smith"
