--- a/config.toml
+++ b/config.toml
@@ -1,48 +1,189 @@
 baseurl = "https://aarynsmith.com/"
 DefaultContentLanguage = "en"
 title = "Aaryn Smith"
-theme = "beautifulhugo"
-metaDataFormat = "yaml"
-pygmentsCodeFences = true
-pygmentsUseClasses = true
-disqusShortname = "aarynsmith-com"
+theme = "LoveIt"
 
-
-[Params]
-  subtitle = "Developer / Sysadmin / Jack of all trades"
-  logo = "img/Gopher.png"
-  favicon = "img/favicon.ico"
-  dateFormat = "January 2, 2006"
-  commit = false
-  rss = true
-  comments = false
-  readingTime = true
-  socialShare = false
-
-
-[Author]
-  name = "Aaryn Smith"
-  website = "https://aarynsmith.com/"
-  email = "aarynsmith<AT>gmail<DOT>com"
-  github = "AarynSmith"
-  gitlab = "aarynsmith"
-
-[[menu.main]]
-    name = "Resume"
+[menu]
+  [[menu.main]]
+    identifier = "resume"
+    name = "Resumé"
     url = "https://aarynsmith.gitlab.io/"
     weight = 1
-
-[[menu.main]]
+  [[menu.main]]
+    identifier = "about"
     name = "About"
-    url = "pages/about-me/"
+    url = "/pages/about-me"
     weight = 10
-
-[[menu.main]]
+  [[menu.main]]
+    identifier = "blog"
     name = "Blog"
-    url = "blog/"
+    url = "/posts/"
     weight = 20
-
-[[menu.main]]
+  [[menu.main]]
+    identifier = "projects"
     name = "Projects"
-    url = "projects/"
+    url = "/projects/"
     weight = 30
+
+[author]
+  name = "Aaryn Smith"
+  email = "aarynsmith<at>gmail.com"
+
+
+[params]
+  version = "0.2.X"
+  description = "Aaryn Smith"
+  keywords = ["Blog", "Homepage"]
+  # site default theme ("light", "dark", "auto")
+  defaultTheme = "auto"
+  # public git repo url only then enableGitInfo is true
+  gitRepo = ""
+  # LoveIt NEW | 0.1.1 which hash function used for SRI, when empty, no SRI is used
+  # ("sha256", "sha384", "sha512", "md5")
+  fingerprint = ""
+  # LoveIt NEW | 0.2.0 date format
+  dateFormat = "2006-01-02"
+  # website images for Open Graph and Twitter Cards
+  images = ["/logo.png"]
+
+ # LoveIt NEW | 0.2.5 TypeIt config
+  [params.typeit]
+    # typing speed between each step (measured in milliseconds)
+    speed = 50
+    # blinking speed of the cursor (measured in milliseconds)
+    cursorSpeed = 1000
+    # character used for the cursor (HTML format is supported)
+    cursorChar = "|"
+    # cursor duration after typing finishing (measured in milliseconds, "-1" means unlimited)
+    duration = 2000
+
+  [params.app]
+    # optional site title override for the app when added to an iOS home screen or Android launcher
+    title = "Aaryn Smith"
+    # whether to omit favicon resource links
+    noFavicon = false
+    # modern SVG favicon to use in place of older style .png and .ico files
+    svgFavicon = ""
+    # Android browser theme color
+    themeColor = "#ffffff"
+    # Safari mask icon color
+    iconColor = "#5bbad5"
+    # Windows v8-10 tile color
+    tileColor = "#da532c"
+
+  [params.header]
+    desktopMode = "fixed"
+    mobileMode = "auto"
+    [params.header.title]
+      #logo = "/img/Gopher.png"
+      name = "Aaryn Smith"
+      pre = ""
+      post = ""
+      typeit = false
+
+  [params.footer]
+    enable = true
+    custom = ''
+    hugo = false
+    copyright = true
+    author = true
+
+  [params.home]
+    rss = 10
+    # Home page profile
+    [params.home.profile]
+      enable = true
+      avatarURL = "/img/Gopher.png"
+      # subtitle shown in home page
+      subtitle = "Developer / Sysadmin / Jack of all trades"
+      # whether to use typeit animation for subtitle
+      typeit = true
+      # whether to show social links
+      social = true
+      # LoveIt NEW | 0.2.0 disclaimer (HTML format is supported)
+      disclaimer = ""
+    # Home page posts
+    [params.home.posts]
+      enable = true
+      # special amount of posts in each home posts page
+      paginate = 6
+
+  [params.page]
+    hiddenFromHomePage = false
+    hiddenFromSearch = false
+    twemoji = false
+    lightgallery = false
+    ruby = false
+    fraction = true
+    fontawesome = true
+    linkToMarkdown = true
+    rssFullText = false
+    [params.page.comment]
+      enable = true
+      [params.page.comment.disqus]
+        enable = false
+        shortname = "aarynsmith-com"
+    [params.page.toc]
+      enable = true
+      keepStatic = false
+      auto = true
+    [params.page.math]
+      enable = false
+      blockLeftDelimiter = "$$"
+      blockRightDelimiter = "$$"
+      inlineLeftDelimiter = "$"
+      inlineRightDelimiter = "$"
+      copyTex = true
+      mhchem = true
+    [params.page.code]
+      copy = true
+      maxShownLines = 1000
+    [params.page.library]
+      [params.page.library.css]
+        #spoiler = "spoiler.css"
+
+  [params.cookieconsent]
+    enable = false
+    # text strings used for Cookie consent banner
+    [params.cookieconsent.content]
+      message = ""
+      dismiss = ""
+      link = ""
+  
+  [params.social] 
+    GitHub = "AarynSmith"
+    Gitlab = "AarynSmith"
+    Email = "Aaryn.Smith<at>gmail.com"
+
+[markup]
+  [markup.highlight]
+    codeFences = true
+    guessSyntax = true
+    lineNos = true
+    lineNumbersInTable = true
+    noClasses = false
+  
+  [markup.goldmark]
+    [markup.goldmark.extensions]
+      definitionList = true
+      footnote = true
+      linkify = true
+      strikethrough = true
+      table = true
+      taskList = true
+      typographer = true
+    
+    [markup.goldmark.renderer]
+      # whether to use HTML tags directly in the document
+      unsafe = true
+  
+  [markup.tableOfContents]
+    startLevel = 2
+    endLevel = 6
+
+[outputs]
+  home = ["HTML", "RSS", "JSON"]
+  page = ["HTML"]
+  section = ["HTML", "RSS"]
+  taxonomy = ["HTML", "RSS"]
+  taxonomyTerm = ["HTML"]
