--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,17 +4,13 @@
 	"settings": {
 		"terminal.integrated.shell.linux": "/bin/ash"
 	},
-	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
 		"davidanson.vscode-markdownlint",
-		"shuworks.vscode-table-formatter"
+		"shuworks.vscode-table-formatter",
+		"rusnasonov.vscode-hugo"
 	],
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [
 		1313
 	],
-	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "cd ${input:projectName} && bundle install",
-	// Uncomment to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
-	// "remoteUser": "vscode"
+	"remoteUser": "vscode"
 }
